--- a/public/CSS/main.css
+++ b/public/CSS/main.css
@@ -677,22 +677,6 @@ td {
   text-align: center !important;
 }
 
-.status-success {
-  background-color: #28a745; /* verde */
-}
-
-.status-warning {
-  background-color: #ffc107; /* arancione */
-}
-
-.status-light-danger {
-  background-color: #f88a8a; /* rosso chiaro */
-}
-
-.status-danger {
-  background-color: #dc3545; /* rosso */
-}
-
 .status-indicator {
   display: inline-block;
   width: 1rem;
@@ -714,11 +698,11 @@ td {
 }
 
 .status-warning {
-  background-color: #ffc107; /* Arancione */
+  background-color: yellow; /* giallo */
 }
 
 .status-light-danger {
-  background-color: #f88a8a; /* Rosso chiaro */
+  background-color: orange; /* Arancione */
 }
 
 .status-danger {
