--- a/views/index.html
+++ b/views/index.html
@@ -126,7 +126,7 @@
                                         style="display: flex; align-items: center; gap: 0.5rem; padding: 0.3rem 1rem; cursor: pointer;">
                                         <input type="checkbox" class="multi-status" data-status="status-light-danger"
                                             checked>
-                                        <span class="status-indicator status-light-danger"></span> Rosa
+                                        <span class="status-indicator status-light-danger"></span> Arancione
                                     </label>
                                     <label
                                         style="display: flex; align-items: center; gap: 0.5rem; padding: 0.3rem 1rem; cursor: pointer;">
