--- a/views/report.html
+++ b/views/report.html
@@ -104,7 +104,8 @@
                     </div>
                     <div class="search-interventi-group">
                         <label for="search-interventi" class="search-label">Cerca intervento per nome</label>
-                        <input type="text" id="search-interventi" class="input-search" placeholder="Cerca intervento..." autocomplete="off">
+                        <input type="text" id="search-interventi" class="input-search" placeholder="Cerca intervento..."
+                            autocomplete="off">
                     </div>
                     <div class="table-container">
                         <table id="tabella-interventi" class="interventions-table">
@@ -151,9 +152,7 @@
                 </div>
                 <div class="modal-actions">
                     <button type="submit" class="btn btn-primary" id="save-btn">Salva</button>
-
-
-                    <button type=" button" onclick="hideEditModal()" class="btn btn-secondary">Annulla</button>
+                    <button type="button" onclick="hideEditModal()" class="btn btn-secondary">Annulla</button>
                 </div>
             </form>
         </div>
